--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>toaster</title>
+    <link
+      rel="preload"
+      href="/src/assets/rive/toaster.riv"
+      as="fetch"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div id="root"></div>
