--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
       as="fetch"
       crossorigin="anonymous"
     />
+    <!-- og tag -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://toaster-booth.vercel.app/" />
+    <meta property="og:title" content="한동대 전산전자 마일리지 시스템" />
+    <meta
+      property="og:description"
+      content="toaster; 나만의 귀여운 토스트 네컷 사진관 📸"
+    />
+    <meta property="og:image" content="/imgs/thumbnail.png" />
   </head>
   <body>
     <div id="root"></div>
