chore: 메타 title 변경

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- og tag -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://toaster-booth.vercel.app/" />
-    <meta property="og:title" content="toaster booth" />
+    <meta property="og:title" content="TOASTER BOOTH" />
     <meta
       property="og:description"
       content="toaster; 나만의 귀여운 토스트 네컷 사진관 📸"
